@@ -33,7 +33,7 @@ CP="${BINDIR}:${BOOTDIR}:${TOOLSJAR}:${CF_BIN}:${CF_JAR}"
 JFLAGS="-XDignore.symbol.file=true -Xmaxerrs 20000 -Xmaxwarns 20000\
  -source 8 -target 8 -encoding ascii -cp ${CP}"
 PROCESSORS="fenum,formatter,guieffect,i18n,i18nformatter,interning,nullness,signature"
-PFLAGS="-Anocheckjdk -Aignorejdkastub -AuseDefaultsForUncheckedCode=source -Awarns"
+PFLAGS="-ApermitMissingJdk -Aignorejdkastub -AuseDefaultsForUncheckedCode=source -Awarns"
 JAIFDIR="${WORKDIR}/jaifs"
 SYMDIR="${WORKDIR}/sym"
 
