@@ -1761,7 +1761,7 @@ large codebase without being inundated in stack traces.
   through the \code{-Astubs} option are still processed. This is useful
   when experimenting with an alternative stub file.
 
-\item \code{-Anocheckjdk}:
+\item \code{-ApermitMissingJdk}:
   don't issue an error if no annotated JDK can be found.
 
 \item \code{-AstubDebug}:
@@ -2267,7 +2267,7 @@ without warnings or errors.
 %%  LocalWords:  addAbsoluteDefault BaseAnnotatedTypeFactory superclasses
 %%  LocalWords:  SupportedOptions AprintAllQualifiers InvisibleQualifier
 %%  LocalWords:  Adetailedmsgtext AnoPrintErrorStack Aignorejdkastub Astubs
-%%  LocalWords:  Anocheckjdk AstubDebug Aflowdotdir AresourceStats Regex
+%%  LocalWords:  ApermitMissingJdk AstubDebug Aflowdotdir AresourceStats Regex
 %%  LocalWords:  classfiles CHECKERFRAMEWORK RegexUtil asRegex myString
 %%  LocalWords:  myInt CFAbstractTransfer RegexTransfer CFAbstractAnalysis
 %%  LocalWords:  createTransferFunction RegexAnalysis createFlowAnalysis
