@@ -768,7 +768,7 @@ Amount of detail in messages; see Section~\ref{creating-debugging-options-detail
 
 \item
  \<-Aignorejdkastub>,
- \<-Anocheckjdk>,
+ \<-ApermitMissingJdk>,
  \<-AstubDebug>
 Stub and JDK libraries; see Section~\ref{creating-debugging-options-libraries}.
 
@@ -1502,7 +1502,7 @@ same methodology in different words.
 % LocalWords:  callees Xmx unconfuse fenum propkey forName jsr308 Djsr308
 % LocalWords:  bootclasspath AonlyUses AskipDefs AonlyDefs AcheckPurityAnnotations
 % LocalWords:  AsuppressWarnings AassumeSideEffectFree Adetailedmsgtext
-% LocalWords:  AignoreRawTypeArguments AsuggestPureMethods Anocheckjdk
+% LocalWords:  AignoreRawTypeArguments AsuggestPureMethods ApermitMissingJdk
 % LocalWords:  AassumeAssertionsAreEnabled AassumeAssertionsAreDisabled
 % LocalWords:  AconcurrentSemantics AstubWarnIfNotFound AnoPrintErrorStack
 % LocalWords:  AprintAllQualifiers Aignorejdkastub AstubDebug Aflowdotdir
