@@ -67,7 +67,8 @@ public class TypecheckExecutor {
         nonJvmOptions.add("100000");
         nonJvmOptions.add("-Xlint:deprecation");
 
-        nonJvmOptions.add("-Anocheckjdk");
+        nonJvmOptions.add("-ApermitMissingJdk");
+        nonJvmOptions.add("-Anocheckjdk"); // temporary, for backward compatibility
 
         options.addAll(nonJvmOptions);
 
